updates formatting on word

--- a/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
+++ b/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
@@ -1238,9 +1238,9 @@
     "\n",
     "It should be noted that while the semantic search query provides more relevant results, it is also more computationally expensive than the lexical search query. This is because the semantic search query requires the calculation of vector representations, which can be computationally intensive. \n",
     "\n",
-    "Ultimately, it is recommended to use the semantic_text type when implementing semantic search for a few key reasons:\n",
+    "Ultimately, it is recommended to use the `semantic_text` type when implementing semantic search for a few key reasons:\n",
     "- Query structure is simple and easy to understand.\n",
-    "- Implementing the semantic_text type requires minimal changes to the index mapping and query.\n",
+    "- Implementing the `semantic_text` type requires minimal changes to the index mapping and query.\n",
     "- Setting up an ingest pipeline and inference endpoint is unnecessary.\n",
     "\n",
     "Using `spare_vector` and `dense_vector` types are more complex and requires additional setup, but can be useful in certain scenarios where semantic search needs to be customized beyond standard semantic text search. This could be a change in the similarity algorithm, use of different vectorization models, or any necessary preprocessing steps. \n",
