Fix comment formatting in Jupyter notebook

--- a/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
+++ b/supporting-blog-content/lexical-and-semantic-search-with-elasticsearch/ecommerce_dense_sparse_project.ipynb
@@ -1106,8 +1106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Convert search_results from es|ql to a dict with _source\n",
-    "    and subproperties of score, description, category, and product \"\"\"\n",
+    "# Convert search_results from es|ql to a dict with _source and subproperties of score, description, category, and product\n",
     "\n",
     "\n",
     "def normalize_results(search_results):\n",
