Add requirements.txt and ChatGPT examples screenshots

--- a/supporting-blog-content/elasticsearch-chatgpt-connector/elasticsearch-mcp-server-for-chatgpt.ipynb
+++ b/supporting-blog-content/elasticsearch-chatgpt-connector/elasticsearch-mcp-server-for-chatgpt.ipynb
@@ -38,7 +38,9 @@
    "source": [
     "## Install Dependencies\n",
     "\n",
-    "This cell installs all required Python packages: `fastmcp` for the MCP server framework, `elasticsearch` for connecting to Elasticsearch, `pyngrok` for creating a public tunnel, and `pandas` for data manipulation."
+    "This cell installs all required Python packages: `fastmcp` for the MCP server framework, `elasticsearch` for connecting to Elasticsearch, `pyngrok` for creating a public tunnel, and `pandas` for data manipulation.\n",
+    "\n",
+    "**Alternative:** You can also install dependencies using the provided 'requirements.txt' file."
    ]
   },
   {
@@ -1103,6 +1105,21 @@
     "        time.sleep(1)\n",
     "except KeyboardInterrupt:\n",
     "    print(\"\\nServer stopped\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example: ChatGPT Interaction\n",
+    "\n",
+    "Here's an example of ChatGPT using the Elasticsearch connector to search through GitHub issues:\n",
+    " - **Search tool:**\n",
+    "\n",
+    "    ![Search Example](./images/chatgpt-search-example.png)\n",
+    " - **Fetch tool:**\n",
+    "\n",
+    "    ![Fetch Example](./images/chatgpt-fetch-example.png)"
    ]
   },
   {
