display card code changes

--- a/supporting-blog-content/elasticsearch-inference-api-and-hugging-face/notebook.ipynb
+++ b/supporting-blog-content/elasticsearch-inference-api-and-hugging-face/notebook.ipynb
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "id": "cb2f4981",
       "metadata": {},
       "outputs": [],
@@ -451,7 +451,14 @@
         "            cleaned_text = cleaned_text.strip()\n",
         "\n",
         "            parsed = json.loads(cleaned_text)\n",
-        "            recommendations_list = parsed.get(\"recommendations\", [])\n",
+        "\n",
+        "            # Extract recommendations from list format\n",
+        "            for idx, item in enumerate(parsed, 1):\n",
+        "                rec_text = item.get(\"recommendation\", \"\")\n",
+        "                if rec_text:\n",
+        "                    recommendations_list.append(\n",
+        "                        {\"article_number\": idx, \"recommendation\": rec_text}\n",
+        "                    )\n",
         "        except json.JSONDecodeError as e:\n",
         "            print(f\"⚠️  Could not parse recommendations as JSON: {e}\")\n",
         "            return\n",
